# serializer version: 1
# name: test_sensors[sensor.hl_l2340dw_b_w_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_b_w_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'B/W pages',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bw_pages',
    'unique_id': '0123456789_bw_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_b_w_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW B/W pages',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_b_w_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '709',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_belt_unit_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_belt_unit_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Belt unit remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'belt_unit_remaining_life',
    'unique_id': '0123456789_belt_unit_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_belt_unit_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Belt unit remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_belt_unit_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '97',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_drum_page_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_black_drum_page_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Black drum page counter',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'black_drum_page_counter',
    'unique_id': '0123456789_black_drum_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_drum_page_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Black drum page counter',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_black_drum_page_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1611',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_drum_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_black_drum_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Black drum remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'black_drum_remaining_life',
    'unique_id': '0123456789_black_drum_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_drum_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Black drum remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_black_drum_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '92',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_drum_remaining_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_black_drum_remaining_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Black drum remaining pages',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'black_drum_remaining_pages',
    'unique_id': '0123456789_black_drum_remaining_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_drum_remaining_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Black drum remaining pages',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_black_drum_remaining_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16389',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_toner_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_black_toner_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Black toner remaining',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'black_toner_remaining',
    'unique_id': '0123456789_black_toner_remaining',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_black_toner_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Black toner remaining',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_black_toner_remaining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_color_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_color_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Color pages',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'color_pages',
    'unique_id': '0123456789_color_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_color_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Color pages',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_color_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '902',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_drum_page_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_cyan_drum_page_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cyan drum page counter',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cyan_drum_page_counter',
    'unique_id': '0123456789_cyan_drum_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_drum_page_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Cyan drum page counter',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_cyan_drum_page_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1611',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_drum_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_cyan_drum_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cyan drum remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cyan_drum_remaining_life',
    'unique_id': '0123456789_cyan_drum_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_drum_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Cyan drum remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_cyan_drum_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '92',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_drum_remaining_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_cyan_drum_remaining_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cyan drum remaining pages',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cyan_drum_remaining_pages',
    'unique_id': '0123456789_cyan_drum_remaining_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_drum_remaining_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Cyan drum remaining pages',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_cyan_drum_remaining_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16389',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_toner_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_cyan_toner_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cyan toner remaining',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cyan_toner_remaining',
    'unique_id': '0123456789_cyan_toner_remaining',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_cyan_toner_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Cyan toner remaining',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_cyan_toner_remaining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_drum_page_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_drum_page_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Drum page counter',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'drum_page_counter',
    'unique_id': '0123456789_drum_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_drum_page_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Drum page counter',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_drum_page_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '986',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_drum_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_drum_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Drum remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'drum_remaining_life',
    'unique_id': '0123456789_drum_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_drum_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Drum remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_drum_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '92',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_drum_remaining_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_drum_remaining_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Drum remaining pages',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'drum_remaining_pages',
    'unique_id': '0123456789_drum_remaining_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_drum_remaining_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Drum remaining pages',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_drum_remaining_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11014',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_duplex_unit_page_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_duplex_unit_page_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Duplex unit page counter',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'duplex_unit_page_counter',
    'unique_id': '0123456789_duplex_unit_pages_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_duplex_unit_page_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Duplex unit page counter',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_duplex_unit_page_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '538',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_fuser_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_fuser_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fuser remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fuser_remaining_life',
    'unique_id': '0123456789_fuser_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_fuser_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Fuser remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_fuser_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '97',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_last_restart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_last_restart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last restart',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'last_restart',
    'unique_id': '0123456789_uptime',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_last_restart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'HL-L2340DW Last restart',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_last_restart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-03-03T15:04:24+00:00',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_drum_page_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_magenta_drum_page_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Magenta drum page counter',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'magenta_drum_page_counter',
    'unique_id': '0123456789_magenta_drum_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_drum_page_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Magenta drum page counter',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_magenta_drum_page_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1611',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_drum_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_magenta_drum_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Magenta drum remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'magenta_drum_remaining_life',
    'unique_id': '0123456789_magenta_drum_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_drum_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Magenta drum remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_magenta_drum_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '92',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_drum_remaining_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_magenta_drum_remaining_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Magenta drum remaining pages',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'magenta_drum_remaining_pages',
    'unique_id': '0123456789_magenta_drum_remaining_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_drum_remaining_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Magenta drum remaining pages',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_magenta_drum_remaining_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16389',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_toner_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_magenta_toner_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Magenta toner remaining',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'magenta_toner_remaining',
    'unique_id': '0123456789_magenta_toner_remaining',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_magenta_toner_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Magenta toner remaining',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_magenta_toner_remaining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_page_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_page_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Page counter',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'page_counter',
    'unique_id': '0123456789_page_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_page_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Page counter',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_page_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '986',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_pf_kit_1_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_pf_kit_1_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PF Kit 1 remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pf_kit_1_remaining_life',
    'unique_id': '0123456789_pf_kit_1_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_pf_kit_1_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW PF Kit 1 remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_pf_kit_1_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '98',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': '0123456789_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'waiting',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_drum_page_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_yellow_drum_page_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yellow drum page counter',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'yellow_drum_page_counter',
    'unique_id': '0123456789_yellow_drum_counter',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_drum_page_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Yellow drum page counter',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_yellow_drum_page_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1611',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_drum_remaining_lifetime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_yellow_drum_remaining_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yellow drum remaining lifetime',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'yellow_drum_remaining_life',
    'unique_id': '0123456789_yellow_drum_remaining_life',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_drum_remaining_lifetime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Yellow drum remaining lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_yellow_drum_remaining_lifetime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '92',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_drum_remaining_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_yellow_drum_remaining_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yellow drum remaining pages',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'yellow_drum_remaining_pages',
    'unique_id': '0123456789_yellow_drum_remaining_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_drum_remaining_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Yellow drum remaining pages',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_yellow_drum_remaining_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16389',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_toner_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hl_l2340dw_yellow_toner_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yellow toner remaining',
    'platform': 'brother',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'yellow_toner_remaining',
    'unique_id': '0123456789_yellow_toner_remaining',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.hl_l2340dw_yellow_toner_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL-L2340DW Yellow toner remaining',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hl_l2340dw_yellow_toner_remaining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
